Improved layout overall on slides, fixed alignment

--- a/public/css/slide-bytecode.css
+++ b/public/css/slide-bytecode.css
@@ -37,7 +37,7 @@
   text-align: left !important;
   top: 0 !important;
   right: 0 !important;
-  bottom: 0 !important;
+  bottom: 150px !important;
   left: 0 !important;
   transform: none !important;
   width: 100% !important;
@@ -63,7 +63,7 @@
   height: 100px;
   background-size: contain !important;
   bottom: 14px;
-  left: 85px; /* TODO: Improve responsiveness */
+  left: 60px; /* TODO: Improve responsiveness */
   background-image: url('https://bytecode.nl/cdn/icon-black.png');
 }
 
@@ -89,6 +89,6 @@
   height: 100px;
   background-size: contain !important;
   top: 35px;
-  left: 95px; /* TODO: Improve responsiveness */
+  left: 70px; /* TODO: Improve responsiveness */
   background-image: url('https://bytecode.nl/cdn/logo-white.png');
 }
